--- a/index.html
+++ b/index.html
@@ -126,41 +126,44 @@
                 </ul>
             </div>
             <div class="card-price">
-                <p><font size="4">IDR 40.000</font></p>
+                <p><font size="4">IDR 25.000</font></p>
                 <button class="btn-order">Order Now</button>
             </div>
         </div>
 
         <div class="card-content">
             <div class="card-img">
-                <img src="./assets/drink1.png" alt="">
+                <img src="./assets/drink2.jpg" alt="">
             </div>
             <div class="card-list">
-                <h3>Hazelnut Latte</h3>
+                <h3>Pinky Promise</h3>
                 <ul>
-                    <li>HazelnutSyrup</li>
-                    <li>Wanilla Whipped Cream</li>
-                    <li>Ice / Hot</li>
-                    <li>Sliced Banana on Top</li>
+                    <li>1 Shot of Coffe</li>
+                    <li>Vanilla Whipped Cream</li>
+                    <li>Chocolate Biscuits</li>
+                    <li>Strawberry Syrup</li>
+                    <li>Sliced Strawberry on Top</li>
                 </ul>
             </div>
             <div class="card-price">
-                <p><font size="4">IDR 40.000</font></p>
+                <p><font size="4">IDR 30.000</font></p>
                 <button class="btn-order">Order Now</button>
             </div>
         </div>
 
         <div class="card-content">
             <div class="card-img">
-                <img src="./assets/drink1.png" alt="">
+                <img src="./assets/food.png" alt="">
             </div>
             <div class="card-list">
-                <h3>Hazelnut Latte</h3>
+                <h3>Chicken Wings</h3>
                 <ul>
-                    <li>HazelnutSyrup</li>
-                    <li>Wanilla Whipped Cream</li>
-                    <li>Ice / Hot</li>
-                    <li>Sliced Banana on Top</li>
+                    <li>Wings</li>
+                    <li>Drum Sticks</li>
+                    <li>Mayonaise and Lemon</li>
+                    <li>Hot Fried</li>
+                    <li>Secret Recipe</li>
+                    <li>Buy 1 Get 1 only for Dine in</li>
                 </ul>
             </div>
             <div class="card-price">
