--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li>Home</li>
                 <li>Products</li>
-                <li>Your Chart</li>
+                <li>Your Cart</li>
                 <li>History</li>
             </ul>
         </div> 
